--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "integration_gitlab",
   "version": "0.0.1",
-  "description": "Gitlab integration",
+  "description": "GitLab integration",
   "main": "index.js",
   "directories": {
     "test": "tests"
