--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.js",
+    "build": "NODE_ENV=production webpack --progress --config webpack.js",
     "dev": "NODE_ENV=development webpack --progress --config webpack.js",
     "watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
     "lint": "eslint --ext .js,.vue src",
@@ -79,8 +79,8 @@
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.1.0",
+    "webpack-cli": "^4.0.0",
     "webpack-node-externals": "^2.5.2"
   }
 }
