--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,13 @@
 on:
   push:
-    branches: [master]
+    branches: [release]
 
 name: Publish release
 
 jobs:
   build:
     name: Build, upload and release in the appstore
+    environment: release
     env:
       APP_ID: integration_gitlab
     runs-on: ubuntu-latest
@@ -45,7 +46,7 @@ jobs:
           php ~/html/nextcloud/occ maintenance:mode --off
           cd ~/html/nextcloud/apps/${APP_ID}
           echo "###### npm install"
-          npm install
+          npm ci
           echo "###### npm run build"
           npm run build
           echo "###### make appstore"
