--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@nextcloud/eslint-config": "^3.0.0",
     "@nextcloud/eslint-plugin": "^2.0.0",
     "@nextcloud/webpack-vue-config": "^2.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.19.0",
