--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "vue": "^2.6.11"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=14.0.0",
+    "npm": ">=7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
