--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@nextcloud/l10n": "^1.4.1",
     "@nextcloud/moment": "^1.1.1",
     "@nextcloud/router": "^2.0.0",
-    "@nextcloud/vue": "^3.10.1",
+    "@nextcloud/vue": "^4.1.0",
     "@nextcloud/vue-dashboard": "^2.0.1",
     "vue": "^2.6.14"
   },
@@ -54,7 +54,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.14.7",
     "@nextcloud/browserslist-config": "^2.1.0",
-    "@nextcloud/eslint-config": "^5.1.0",
+    "@nextcloud/eslint-config": "^6.1.0",
     "@nextcloud/eslint-plugin": "^2.0.0",
     "@nextcloud/webpack-vue-config": "^4.0.3",
     "babel-eslint": "^10.1.0",
@@ -63,8 +63,9 @@
     "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^36.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.12.1",
     "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
