--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Use Node 14
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14
 
       - name: Set up npm
-        run: npm i -g npm
+        run: npm i -g npm@^7.0.0
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
