--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^5.3.1",
+		"@nextcloud/vue": "^7.0.0-beta.3",
 		"@nextcloud/vue-dashboard": "^2.0.1",
 		"vue": "^2.6.14",
 		"vue-material-design-icons": "^5.1.2"
