--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^7.0.0-beta.3",
 		"@nextcloud/vue-dashboard": "^2.0.1",
+		"@nextcloud/vue-richtext": "^2.0.0",
+		"escape-html": "^1.0.3",
 		"vue": "^2.6.14",
 		"vue-material-design-icons": "^5.1.2"
 	},
