--- a/package.json
+++ b/package.json
@@ -37,16 +37,16 @@
 	},
 	"dependencies": {
 		"@nextcloud/auth": "^2.0.0",
-		"@nextcloud/axios": "^2.0.0",
+		"@nextcloud/axios": "^2.1.0",
 		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/initial-state": "^2.0.0",
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^7.0.0-beta.5",
+		"@nextcloud/vue": "^7.0.0",
 		"@nextcloud/vue-dashboard": "^2.0.1",
-		"@nextcloud/vue-richtext": "^2.0.1",
-		"vue": "^2.6.14",
+		"@nextcloud/vue-richtext": "^2.0.4",
+		"vue": "^2.7.12",
 		"vue-material-design-icons": "^5.1.2"
 	},
 	"devDependencies": {
