--- a/.github/workflows/phpunit-pgsql.yml
+++ b/.github/workflows/phpunit-pgsql.yml
@@ -29,17 +29,28 @@ permissions:
   contents: read
 
 concurrency:
-  group: phpunit-sqlite-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
+  group: phpunit-pgsql-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: false
 
 jobs:
-  phpunit-sqlite:
+  phpunit-pgsql:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        php-versions: ['8.1', '8.2']
-        server-versions: ['master', 'stable26', 'stable27', 'stable28']
+        php-versions: ['8.1']
+        server-versions: ['master']
+
+    services:
+      postgres:
+        image: ghcr.io/nextcloud/continuous-integration-postgres-14:latest
+        ports:
+          - 4444:5432/tcp
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: rootpassword
+          POSTGRES_DB: nextcloud
+        options: --health-cmd pg_isready --health-interval 5s --health-timeout 2s --health-retries 5
 
     steps:
       - name: Set app env
@@ -48,23 +59,25 @@ jobs:
           echo "APP_NAME=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
 
       - name: Checkout server
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3
+        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
         with:
           submodules: true
           repository: nextcloud/server
           ref: ${{ matrix.server-versions }}
 
       - name: Checkout app
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3
+        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
         with:
           path: apps/${{ env.APP_NAME }}
 
       - name: Set up php ${{ matrix.php-versions }}
-        uses: shivammathur/setup-php@1a18b2267f80291a81ca1d33e7c851fe09e7dfc4 # v2
+        uses: shivammathur/setup-php@c5fc0d8281aba02c7fda07d3a70cc5371548067d # v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, iconv, fileinfo, intl, sqlite, pdo_sqlite
+          # https://docs.nextcloud.com/server/stable/admin_manual/installation/source_installation.html#prerequisites-for-manual-installation
+          extensions: bz2, ctype, curl, dom, fileinfo, gd, iconv, intl, json, libxml, mbstring, openssl, pcntl, posix, session, simplexml, xmlreader, xmlwriter, zip, zlib, pgsql, pdo_pgsql
           coverage: none
+          ini-file: development
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -85,7 +98,7 @@ jobs:
           DB_PORT: 4444
         run: |
           mkdir data
-          ./occ maintenance:install --verbose --database=sqlite --database-name=nextcloud --database-host=127.0.0.1 --database-port=$DB_PORT --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password
+          ./occ maintenance:install --verbose --database=pgsql --database-name=nextcloud --database-host=127.0.0.1 --database-port=$DB_PORT --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass admin
           ./occ app:enable --force ${{ env.APP_NAME }}
 
       - name: Check PHPUnit script is defined
@@ -118,6 +131,11 @@ jobs:
         if: steps.check_integration.outcome == 'success'
         working-directory: apps/${{ env.APP_NAME }}
         run: composer run test:integration
+      
+      - name: Print logs
+        if: always()
+        run: |
+          cat data/nextcloud.log
 
       - name: Skipped
         # Fail the action when neither unit nor integration tests ran
@@ -130,12 +148,12 @@ jobs:
     permissions:
       contents: none
     runs-on: ubuntu-latest
-    needs: phpunit-sqlite
+    needs: phpunit-pgsql
 
     if: always()
 
-    name: phpunit-sqlite-summary
+    name: phpunit-pgsql-summary
 
     steps:
       - name: Summary status
-        run: if ${{ needs.phpunit-sqlite.result != 'success' }}; then exit 1; fi
+        run: if ${{ needs.phpunit-pgsql.result != 'success' }}; then exit 1; fi
