--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -38,9 +38,9 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        ocp-version: [ 'dev-stable26', 'dev-stable27', 'dev-stable28', 'dev-master' ]
+        ocp-version: [ '^26', '^27', '^28', 'dev-master' ]
         php-version: [ '8.0', '8.1', '8.2', '8.3' ]
-  
+
 
     name: Psalm check on PHP ${{ matrix.php-version }} and OCP ${{ matrix.ocp-version }}
     steps:
