--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -38,7 +38,7 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        ocp-version: [ '^26', '^27', '^28', 'dev-master' ]
+        ocp-version: [ '^26', '^27', '^28', 'dev-stable29', 'dev-master' ]
         php-version: [ '8.0', '8.1', '8.2', '8.3' ]
 
 
