build: Add PSR-4 autoloading to make tests work
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/composer.json
+++ b/composer.json
@@ -50,5 +50,10 @@
 			"target-directory": "vendor-bin",
 			"forward-command": true
 		}
+	},
+	"autoload": {
+		"psr-4": {
+			"OCA\\Gitlab\\": "lib/"
+		}
 	}
 }
