--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@nextcloud/initial-state": "^2.1.0",
 		"@nextcloud/l10n": "^2.2.0",
 		"@nextcloud/moment": "^1.3.1",
+		"@nextcloud/password-confirmation": "^5.1.1",
 		"@nextcloud/router": "^3.0.0",
 		"@nextcloud/vue": "^8.8.1",
 		"@nextcloud/vue-dashboard": "^2.0.1",
