--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
 	"version": "1.1.0",
 	"description": "GitLab integration",
 	"main": "index.js",
+	"type": "module",
+	"private": true,
 	"directories": {
 		"test": "tests"
 	},
 	"scripts": {
-		"build": "NODE_ENV=production webpack --progress --config webpack.js",
-		"dev": "NODE_ENV=development webpack --progress --config webpack.js",
-		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
+		"build": "NODE_ENV=production vite --mode production build",
+		"dev": "NODE_ENV=development vite --mode development build",
+		"watch": "NODE_ENV=development vite --mode development build --watch",
 		"lint": "eslint --ext .js,.vue src",
 		"lint:fix": "eslint --ext .js,.vue src --fix",
 		"stylelint": "stylelint src/**/*.vue src/**/*.scss src/**/*.css",
@@ -33,29 +35,28 @@
 	],
 	"engines": {
 		"node": "^20.0.0",
-		"npm": "^9.0.0 || ^10.0.0"
+		"npm": "^10.0.0"
 	},
 	"dependencies": {
-		"@nextcloud/auth": "^2.5.1",
+		"@nextcloud/auth": "^2.5.2",
 		"@nextcloud/axios": "^2.5.1",
-		"@nextcloud/dialogs": "^5.1.2",
-		"@nextcloud/initial-state": "^2.2.0",
-		"@nextcloud/l10n": "^3.2.0",
-		"@nextcloud/moment": "^1.3.4",
-		"@nextcloud/password-confirmation": "^5.3.1",
+		"@nextcloud/dialogs": "v7.0.0-rc.1",
+		"@nextcloud/initial-state": "^3.0.0",
+		"@nextcloud/l10n": "^3.4.0",
+		"@nextcloud/moment": "^1.3.5",
+		"@nextcloud/password-confirmation": "^6.0.0-rc.0",
 		"@nextcloud/router": "^3.0.1",
-		"@nextcloud/vue": "^8.26.1",
-		"@nextcloud/vue-dashboard": "^2.0.1",
-		"vue": "^2.7.16",
+		"@nextcloud/vue": "^9.0.0-rc.6",
+		"vue": "^3.5.18",
 		"vue-material-design-icons": "^5.3.1"
 	},
 	"devDependencies": {
 		"@nextcloud/babel-config": "^1.2.0",
 		"@nextcloud/browserslist-config": "^3.0.1",
 		"@nextcloud/eslint-config": "^8.4.2",
-		"@nextcloud/stylelint-config": "^3.0.1",
-		"@nextcloud/webpack-vue-config": "^6.3.0",
-		"eslint-webpack-plugin": "^4.0.1",
-		"stylelint-webpack-plugin": "^5.0.0"
+		"@nextcloud/stylelint-config": "^3.1.0",
+		"@nextcloud/vite-config": "^2.4.0",
+		"vite-plugin-eslint": "^1.8.1",
+		"vite-plugin-stylelint": "^6.0.2"
 	}
 }
