chore: Upgrade psalm to v6 and drop support for nc < 31

--- a/vendor-bin/psalm/composer.json
+++ b/vendor-bin/psalm/composer.json
@@ -1,10 +1,10 @@
 {
     "require-dev": {
-        "psalm/phar": "^5.22"
+        "vimeo/psalm": "6.x"
     },
     "config": {
         "platform": {
-          "php": "8.0"
+          "php": "8.1.50012"
         }
     }
 }
