--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
 	],
 	"require": {
 		"league/commonmark": "^2.3",
-		"php": "^8.1",
+		"php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
 		"bamarni/composer-bin-plugin": "^1.8"
 	},
 	"scripts": {
 		"lint": "find . -name \\*.php -not -path './vendor*' -print0 | xargs -0 -n1 php -l",
 		"cs:check": "php-cs-fixer fix --dry-run --diff",
 		"cs:fix": "php-cs-fixer fix",
-		"psalm": "psalm.phar --no-cache",
+		"psalm": "psalm --no-cache",
+        "psalm:update-baseline": "psalm --threads=1 --update-baseline",
+        "psalm:update-baseline:force": "psalm --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
 		"test:unit": "phpunit -c tests/phpunit.xml --no-coverage",
 		"post-install-cmd": [
 			"@composer bin all install --ansi",
@@ -34,7 +36,7 @@
 		"optimize-autoloader": true,
 		"classmap-authoritative": true,
 		"platform": {
-			"php": "8.1"
+			"php": "8.1.50012"
 		},
 		"allow-plugins": {
 			"bamarni/composer-bin-plugin": true
