chore(ci): Don't test on stable31

--- a/.github/workflows/phpunit-sqlite.yml
+++ b/.github/workflows/phpunit-sqlite.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ['8.2']
-        server-versions: ['stable31', 'stable32', 'master']
+        server-versions: ['stable32', 'master']
 
     steps:
       - name: Set app env
